# vericlaw

./: .env.example  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: keepalive.yml
adapters/: croo.py  genlayer_call.py  llm.py  services.py
clients/: requester_demo.py  verify_client.py
contracts/: deliverable_auditor.py  resolution_oracle.py  trust_oracle.py  verifier.py
docs/: sdk-notes.md
docs/superpowers/plans/: 2026-06-20-croo-verification-agent.md
docs/superpowers/specs/: 2026-06-20-croo-verification-agent-design.md
scripts/: check_setup.py
supabase/functions/cryptorank/: index.ts
tests/: test_attest.py  test_croo_adapter.py  test_evidence_onchain.py  test_evidence_web.py  test_genlayer_call.py  test_genlayer_verifier.py  test_local_llm.py  test_pipeline.py  test_services.py  test_types.py
verifier_core/: attest.py  pipeline.py  types.py
verifier_core/evidence/: onchain.py  web.py
verifier_core/verifiers/: base.py  genlayer.py  local_llm.py
