[project]
name = "croo-verify"
version = "0.1.0"
description = "A paid CAP agent that verifies claims, judges deliverables, and attests on-chain facts."
requires-python = ">=3.10"
dependencies = [
  "croo-sdk",
  "genlayer-py",
  "web3>=6",
  "eth-account>=0.10",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
